test/invalid/baseline/promise-nullable.txt
Syntax error at line 2 in promise-nullable.webidl, since `interface X`:
    attribute Promise<void>?
                           ^ Promise type cannot be nullable
